# major

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  data.json  dump.json  manage.py  pyproject.toml
.github/workflows/: deploy.yml
core/: admin.py  context_processors.py  forms.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_lesson_alter_publication_file.py  0003_alter_lesson_weekday.py  0004_alter_lesson_weekday.py  0005_pagecontent.py  0006_alter_lesson_weekday.py  0007_alter_pagecontent_content.py  0008_alter_publication_content.py  0009_remove_publication_file_publication_category_and_more.py  0010_alter_publication_category.py  0011_alter_publication_category.py  0012_alter_lesson_students_name_and_more.py
krylovagn/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
static/js/: scripts.js
templates/: base.html  contacts.html  landing.html  lessons_schedule.html  menu.html  publication_list.html
