[project]
name = "major"
version = "0.1.0"
description = ""
authors = [
    {name = "Greg",email = "sogmeadmug@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "django-ckeditor-5 (>=0.2.18,<0.3.0)",
    "bleach (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
